# Resume-Parser-EuriAI

./: README.md  main.py  pyproject.toml
crew_app/: agents.py  crew.py  llm_config.py  tasks.py  utils.py
euriai/: client.py  crewai.py
euriai/agents/: base.py
